# fastapi-boilerplate

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  mypy.ini  pyproject.toml  setup.cfg
src/: .env.example  main.py
src/app/api/: main_router.py  on_start.py
src/app/core/: __init__.py  config.py
src/app/db/: base.py  base_model.py  engine.py  init_db.py  session.py
