[tool.poetry]
name = "fastapi-boilerplate"
version = "0.1.0"
description = ""
authors = ["Hensel Jahja <henseljahja@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.37"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.961"
isort = "^5.10.1"
pycln = "^1.3.3"
pre-commit = "^2.19.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
